@@ -130,7 +130,10 @@ prevent_razing_by_players = false
 minimum_city_separation = 1
 disallow_founding_next_to_foreign_city = true
 
-; Set to a number to limit railroad movement to that many tiles per turn. To return to infinite railroad movement, set to false or a number <=0. 
+; Set to a number to limit railroad movement to that many tiles per turn. To return to infinite railroad movement, set to false or a number <=0.
+; NOTE: For best results, the railroad limit should be a multiple of the "movement rate along roads" (set in the editor, normally 3). The limitation
+; will work in any case, but setting the limit this way helps avoid an integer overflow issue inside the pathfinder that may cause it to fail to find
+; the shortest paths for units with a large number of available moves.
 limit_railroad_movement = false
 
 remove_unit_limit = true
